<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adriangutierrez.android.imc.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texto_etiqueta_peso"/>

    <EditText
        android:id="@+id/field_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texto_etiqueta_estatura"/>
    <EditText
        android:id="@+id/field_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/Button_Calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Texto_boton_calcular"/>
        <Button
            android:id="@+id/Button_Limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Texto_boton_limpiar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/Texto_etiqueta_resultado"/>
    <TextView
        android:id="@+id/text_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"/>

</LinearLayout>
